--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -95,7 +95,7 @@ BEGIN
             VALUE "InternalName", "embiggen_your_eyes" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "embiggen_your_eyes.exe" "\0"
-            VALUE "ProductName", "embiggen_your_eyes" "\0"
+            VALUE "ProductName", "Stellar Zoom" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
