--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = embiggen_your_eyes
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.embiggenYourEyes
+PRODUCT_BUNDLE_IDENTIFIER = com.example.stellarZoom
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
