--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
   url_launcher: ^6.1.12
+  flutter_tts: ^3.8.3
 
 dev_dependencies:
   flutter_test:
