--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   path_provider: ^2.0.11
   url_launcher: ^6.1.12
   flutter_tts: ^3.8.3
+  firebase_core: ^4.1.1
+  firebase_ai: ^3.3.0
 
 dev_dependencies:
   flutter_test:
