--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_core: ^4.1.1
   firebase_ai: ^3.3.0
   markdown_widget: ^2.3.2+8
+  image_downloader_web: ^2.0.7
 
 dev_dependencies:
   flutter_test:
