--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   vector_math: ^2.1.0
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.6
   http: ^1.5.0
   cached_network_image: ^3.3.1
   hive: ^2.2.3
