--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,20 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/def.png"
+  web:
+    generate: true
+    image_path: "assets/def.png"
+    background_color: "#0175C2"
+    theme_color: "#0175C2"
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/def.png
